--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valentine Card</title>
     <link rel="stylesheet" href="index.css">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://jeres-domæne.dk/" />
+    <meta property="og:title" content="En besked til Clara..." />
+    <meta property="og:description" content="Jeg har et spørgsmål til dig. Klik her." />
+    <meta property="og:image" content="https://jeres-domæne.dk/preview-image.png" />
 </head>
 <body>
     <div class="container">
@@ -13,20 +18,19 @@
             <div class="envelope">
                 <div class="letter">
                     <div class="text">
-                        <strong>Dear Crush ❤️</strong>
+                        <strong>Til Laura ❤️</strong>
                         <p>
-                            Thinking of you always brings a smile to my face. Your laughter is infectious and your kindness is truly remarkable.
-                            I'd love to get to know you better, Coffee or a walk sometime? Let me know! Take Care 🌹
-                        </p>
+                            Jeg nyder at følge med i dit hot nurse eventyr i Vietnam, og se alle de mange oplevelser du får.
+                            Tænk, at jeg er så heldig, at have så sej og dejlig en kæreste.
+                            Selvom du ikke er hjemme på valentinsdag, skal du ikke snydes for at blive spurgt ud. Derfor vil jeg høre, om du vil med mig på date den 12. april (vores årsdag)
+                                       Elsker at elske dig ❤️
+                            Kys, din Frode
                     </div>
                 </div>
             </div>
-            <div class="developed-by">
-                <p>Designed with ❤️ by Anurag rai</p>
-            </div>
             <div class="heart"></div>
             <div class="click-me">
-                <p>Touch This Heart</p>
+                <p></p>
             </div>
         </div>
     </div>
